upgrade to mkdocs-material 7.1.9

--- a/theme_overrides/partials/logo.html
+++ b/theme_overrides/partials/logo.html
@@ -1,9 +1,9 @@
 {% if config.theme.logo %}
   <img src="{{ config.theme.logo | url }}" alt="logo">
 {% else %}
-  {% if "FPV" in page.url %}
+  {% if page and "FPV" in page.url %}
     {% set icon = config.theme.icon.logo_fpv or "material/library" %}
-  {% elif "Tech" in page.url %}
+  {% elif page and "Tech" in page.url %}
     {% set icon = config.theme.icon.logo_tech or "material/library" %}
   {% else %}
     {% set icon = config.theme.icon.logo or "material/library" %}
